Sat Mar 26 10:54:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (rb_int_{uminus,plus,minus,mul,idiv,modulo}): basic
	  arithmetic functions for generic Integers.

	* numeric.c (FIXNUM_{POSITIVE,NEGATIVE,ZERO}_P): predict macros
	  only for Fixnum.

Sat Mar 26 06:34:24 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* localeinit.c (rb_locale_charmap_index): fix prototype.
	  patched by Andreas Schwab [Bug #12218]

Fri Mar 25 16:40:48 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* test/ruby/enc/test_case_mapping.rb: Additional tests title case;
	  some not yet activated.

Fri Mar 25 13:38:11 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/extconf.rb: check SSL_CTX_set_next_proto_select_cb
	  function rather than OPENSSL_NPN_NEGOTIATED macro. it exists
	  even if it is disabled by OpenSSL configuration.
	  [ruby-core:74384] [Bug #12182]

	* ext/openssl/ossl_ssl.c: update #ifdef(s) as above.

	* test/openssl/test_ssl.rb: skip NPN tests if NPN is disabled.

Fri Mar 25 11:08:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/uri/http.rb (URI::HTTP#initialize): [DOC] fix example,
	  missing mandatory arguments.  [ruby-core:74540] [Bug #12215]

Fri Mar 25 01:50:58 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c (reserve_stack): fix reserving position where
	  the stack growing bottom to top. [Bug #12118]

Fri Mar 25 01:10:42 2016  Sebastian Schuberth  <sschuberth@gmail.com>

	* lib/mkmf.rb (find_executable0): On Windows, it is actually valid
	  to surround individual PATH directory entries with double
	  quotes. Remove these before joining the path as otherwise the
	  literal quotes would become part of the path, resulting in the
	  executable not to be found.  [Fix GH-1305]

Thu Mar 24 22:38:18 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* strftime.c (FMT, FMTV): remove recursive-assignments to get rid
	  of undefined behavior.  [ruby-core:74532] [Bug #12213]

Thu Mar 24 17:44:02 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
